# 42dle

./: .env  .gitignore  Makefile  README.md  docker-compose.yml
back-end/: .env  Cargo.toml  Dockerfile  Rocket.toml
back-end/migration/src/: m20220101_000001_create_table.rs
back-end/src/: auth.rs  db.rs  extarnal_api.rs  game.rs  index.rs  main.rs  pool_db.rs  student_db.rs  users.rs
back-end/src/entities/: campus_users.rs  game.rs  mod.rs  pool_users.rs  prelude.rs  student_users.rs  users.rs
front-end/: .prettierrc  dockerfile  package-lock.json  package.json
front-end/.svelte-kit/: ambient.d.ts
front-end/.svelte-kit/types/: route_meta_data.json
front-end/.svelte-kit/types/src/routes/: $types.d.ts
front-end/src/lib/header/: header.svelte
front-end/src/routes/: +layout.svelte  +page.svelte
front-end/src/routes/about/: +page.svelte
front-end/src/routes/auth/: +page.svelte  +page.ts
my-skeleton-app/: db.json  package-lock.json  package.json
my-skeleton-app/src/: app.d.ts  app.html  hooks.server.ts  store.ts
my-skeleton-app/src/lib/footer/: footer.svelte
my-skeleton-app/src/lib/header/: header.svelte
my-skeleton-app/src/lib/server/: auth.ts
my-skeleton-app/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte  +page.ts  hooks.client.ts  hooks.server.ts
my-skeleton-app/src/routes/about/: +page.svelte
my-skeleton-app/src/routes/admin/: +page.server.ts  +page.svelte
my-skeleton-app/src/routes/api/: +server.ts  env.ts
my-skeleton-app/src/routes/api/auth/: +server.ts
my-skeleton-app/src/routes/api/game/: +server.ts
my-skeleton-app/src/routes/api/leaderboard/: +server.ts
my-skeleton-app/src/routes/api/logout/: +server.ts
my-skeleton-app/src/routes/auth/: +page.ts
my-skeleton-app/src/routes/game/: +page.server.ts  +page.svelte  +page.ts
my-skeleton-app/src/routes/login/: +page.server.ts  +page.svelte
my-skeleton-app/src/routes/profile/: +page.svelte
(+4 files in other folders)
