[package]
name = "back-end"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json", "secrets"] }
# rocket-jwt = { version = "*"}
reqwest = { version = "0.11.18", features = ["json"] }
postgres = "*"
serde_json = { version = "1.0.103"}
serde = "1.0.152"
sea-orm = { version = "0.12.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "postgres-array"
]}
migration = { path = "migration" }
dotenv = "0.15.0"
http = "*"
jsonwebtoken = "*"
