[package]
name = "back-end"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json", "secrets"] }
# rocket-jwt = { version = "*"}
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
postgres = "*"
serde_json = { version = "1.0.103"}
serde = "1.0.152"
sea-orm = { version = "0.11.3", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "postgres-array"
]}
migration = { path = "migration" }
dotenv = "0.15.0"
http = "0.2.9"
jsonwebtoken = "8.3.0"
rand = "0.8.5"
chrono = "0.4.26"
tokio = "1.30.0"
image = "0.24.7"
imageproc = "0.23.0"
